releases/0.0.3/parse.c
#ifndef PARASITIC_C_FILE__3E9
#define PARASITIC_C_FILE__3E9

// DIRECTIVES //
#include <stdio.h>
#include <stdlib.h>
#include "lex.c"
#include "list.c"
#include "cheats.h"

// STRUCT DECLS //
struct StructMember;
struct Type;
struct ConstantExpr;
struct Item;
struct FnParam;
struct TranslationUnit;
struct Stmt;
struct SwitchArm;
struct Expr;

// ENUM DEFNS //

// STRUCT DEFNS //
struct StructMember {
    struct Type *type;
    char *field;
};

struct Type {
    enum {
    TYPE_INT,
    TYPE_BOOL,
    TYPE_CHAR,
    TYPE_VOID,
    TYPE_CSTR_ARR,
    TYPE_FILE,
    TYPE_PTR,
    TYPE_FN_PTR,
    TYPE_NAMED_STRUCT_REF,
    TYPE_NAMED_ENUM_REF,
    TYPE_ANON_STRUCT,
    TYPE_ANON_UNION,
    TYPE_ANON_ENUM,
} tag;
    union {
    struct {
    struct Type *child;
} ptr;
    struct {
    struct List param_types;
    struct Type *ret_type;
} fn_ptr;
    struct {
    char *name;
} named;
    struct {
    struct List struct_members;
} anon_struct_or_union;
    struct {
    struct List enum_members;
} anon_enum;
} as;
};

struct ConstantExpr {
    enum {
    CONST_INT,
    CONST_BOOL,
    CONST_CSTR,
    CONST_ARRAY,
    CONST_IDENT,
} tag;
    union {
    int const_int;
    bool const_bool;
    char *const_cstr;
    struct List const_array;
    char *const_ident;
} as;
};

struct Item {
    enum {
    ITEM_FN_DECL,
    ITEM_FN_DEF,
    ITEM_GLOBAL_DECL,
    ITEM_NAMED_STRUCT_DECL,
    ITEM_NAMED_ENUM_DECL,
    ITEM_POUND_INCLUDE,
} tag;
    union {
    struct {
    char *name;
    struct List param_types;
    struct Type *ret_type;
} fn_decl;
    struct {
    char *name;
    struct List params;
    struct Type *ret_type;
    struct List body_stmts;
} fn_def;
    struct {
    struct Type *type;
    char *name;
    struct ConstantExpr *initializer;
} global_decl;
    struct {
    char *name;
    struct List members;
} named_struct_decl;
    struct {
    char *name;
    struct List members;
} named_enum_decl;
    struct {
    char *filename;
    enum {
    POUND_INCLUDE_ANGLE_BRACKETS,
    POUND_INCLUDE_DOUBLE_QUOTES,
} kind;
} pound_include;
} as;
};

struct FnParam {
    struct Type *type;
    char *name;
};

struct TranslationUnit {
    int id;
    struct List directives;
    struct List enum_defns;
    struct List struct_defns;
    struct List global_defns;
    struct List fn_defns;
};

struct Stmt {
    enum {
    STMT_BLOCK,
    STMT_IF,
    STMT_WHILE,
    STMT_SWITCH,
    STMT_BREAK,
    STMT_CONTINUE,
    STMT_RETURN,
    STMT_VAR_DECL,
    STMT_EXPRESSION,
} tag;
    union {
    struct {
    struct Expr *cond;
    struct Stmt *consequent;
    struct Stmt *alternative;
} if_stmt;
    struct {
    struct Expr *cond;
    struct Stmt *body;
} while_stmt;
    struct {
    struct Expr *scrutinee;
    struct List switch_arms;
} switch_stmt;
    struct {
    struct List stmts;
} block;
    struct {
    struct Expr *expr;
} ret;
    struct {
    struct Type *type;
    char *name;
    struct Expr *initializer;
} var_decl;
    struct {
    struct Expr *expr;
} expression;
} as;
};

struct SwitchArm {
    struct Expr *test;
    struct List stmts;
};

struct Expr {
    enum {
    EXPR_LITERAL_INT,
    EXPR_LITERAL_CHAR,
    EXPR_LITERAL_STRING,
    EXPR_LITERAL_BOOL,
    EXPR_IDENT,
    EXPR_PARENTHESIZED,
    EXPR_ARR_INDEX,
    EXPR_CALL,
    EXPR_DOT_FIELD_ACCESS,
    EXPR_ARROW_FIELD_ACCESS,
    EXPR_POSTFIX_PLUS_PLUS,
    EXPR_REFERENCE,
    EXPR_DEREFERENCE,
    EXPR_NEGATION,
    EXPR_SIZEOF_EXPR,
    EXPR_SIZEOF_TYPE,
    EXPR_CAST,
    EXPR_ADD,
    EXPR_SUB,
    EXPR_GT,
    EXPR_GTE,
    EXPR_LT,
    EXPR_LTE,
    EXPR_EQUAL,
    EXPR_NOT_EQUAL,
    EXPR_AND,
    EXPR_OR,
    EXPR_ASSIGN,
} tag;
    union {
    struct {
    int value;
} literal_int;
    struct {
    char *value;
} literal_char;
    struct {
    char *value;
} literal_string;
    struct {
    bool value;
} literal_bool;
    struct {
    char *value;
} ident;
    struct {
    struct Expr *child;
} parenthesized;
    struct {
    struct Expr *arr;
    struct Expr *index;
} arr_index;
    struct {
    struct Expr *callable;
    struct List args;
} call;
    struct {
    struct Expr *object;
    char *field;
} field_access;
    struct {
    struct Expr *operand;
} postfix_plus_plus;
    struct {
    struct Expr *operand;
} unary_op;
    struct {
    struct Expr *operand;
} sizeof_expr;
    struct {
    struct Type *type;
} sizeof_type;
    struct {
    struct Type *type;
    struct Expr *expr;
} cast;
    struct {
    struct Expr *x;
    struct Expr *y;
} binary_op;
} as;
};


// GLOBAL DEFNS //
int NEXT_TU_ID = 1000;


// FN DECLS //
struct List parse_struct_member_list(struct Lexer *lxr);
bool display_fn_pointer_type(FILE *out, struct Type *type, char *binder);
bool display_fn_signature(FILE *out, char *name, struct List *fn_params, struct Type *ret_type);
bool display_typed_identifier(FILE *out, struct Type *type, char *ident);
bool display_type(FILE *out, struct Type *type);
bool display_struct_members(FILE *out, struct List *list);
bool display_enum_members(FILE *out, struct List *list);
struct Type * parse_type(struct Lexer *lxr);
struct Type * parse_direct_type(struct Lexer *lxr);
bool display_const_array(FILE *out, struct List *list);
bool display_constant_expr(FILE *out, struct ConstantExpr *expr);
struct List parse_initializer_list(struct Lexer *lxr);
struct ConstantExpr * parse_constant_expr(struct Lexer *lxr);
bool display_param_types(FILE *out, struct List *param_types);
bool display_fn_params(FILE *out, struct List *params);
bool display_item(FILE *out, struct Item *item);
struct List parse_param_types(struct Lexer *lxr);
struct List parse_parameters(struct Lexer *lxr);
struct TranslationUnit translation_unit_init();
void translation_unit_push_item(struct TranslationUnit *tu, struct Item *item);
struct TranslationUnit parse_translation_unit(struct Lexer *lxr);
bool display_item_list(FILE *out, struct List *items);
bool display_tu_struct_decls(FILE *out, struct TranslationUnit *tu);
bool display_tu_fn_decls(FILE *out, struct TranslationUnit *tu);
bool display_translation_unit(FILE *out, struct TranslationUnit *tu);
struct Item * parse_item(struct Lexer *lxr);
struct List parse_enumerator_list(struct Lexer *lxr);
bool display_switch_arms(FILE *out, struct List *arms);
bool display_stmt(FILE *out, struct Stmt *stmt);
bool display_stmt_list(FILE *out, struct List *list);
struct Stmt * parse_stmt(struct Lexer *lxr);
struct List parse_stmt_list(struct Lexer *lxr);
struct Stmt * parse_var_decl(struct Lexer *lxr);
struct List parse_switch_arms(struct Lexer *lxr);
bool display_bin_op(FILE *out, char *op, struct Expr *x, struct Expr *y);
bool display_expr(FILE *out, struct Expr *expr);
bool display_arglist(FILE *out, struct List *list);
struct Expr * parse_primary_expression(struct Lexer *lxr);
struct Expr * parse_postfix_expression(struct Lexer *lxr);
struct List parse_argument_expression_list(struct Lexer *lxr);
struct Expr * parse_unary_expression(struct Lexer *lxr);
struct Expr * parse_cast_expression(struct Lexer *lxr);
struct Expr * parse_multiplicative_expression(struct Lexer *lxr);
struct Expr * parse_additive_expression(struct Lexer *lxr);
struct Expr * parse_shift_expression(struct Lexer *lxr);
struct Expr * parse_relational_expression(struct Lexer *lxr);
struct Expr * parse_equality_expression(struct Lexer *lxr);
struct Expr * parse_logical_and_expression(struct Lexer *lxr);
struct Expr * parse_logical_or_expression(struct Lexer *lxr);
struct Expr * parse_conditional_expression(struct Lexer *lxr);
struct Expr * parse_assignment_expression(struct Lexer *lxr);
struct Expr * parse_expression(struct Lexer *lxr);
struct Expr * parse_constant(struct Lexer *lxr);
void test_expr(char *input);
void test_parse_exprs();
void test_type(char *input);
void test_typed_ident(char *input);
void test_parse_types();
void test_stmt(char *input);
void test_parse_stmts();
void test_item(char *input);
void test_parse_items();
void test_translation_unit(char *input);
void test_parse_translation_unit();
void test_parser();

// FN DEFNS //
struct List parse_struct_member_list(struct Lexer *lxr)
{
struct Type *type;
struct List list = list_init();
while ((type = parse_type(lxr)))
{
lexer_expect(lxr, TOK_IDENT);
char *field = lxr->token;
lexer_expect(lxr, TOK_SEMI);
struct StructMember *sm = malloc(sizeof (*sm));
sm->type = type;
sm->field = field;
list_push(&list, (void *) sm);
}
return list;
}

bool display_fn_pointer_type(FILE *out, struct Type *type, char *binder)
{
if (type == NULL || type->tag != TYPE_FN_PTR)
{
if (type == NULL)
return fprintf_s(out, "void ") >= 0;
else
return display_type(out, type) && fprintf_s(out, " ") >= 0;
}
else
if (type->tag == TYPE_FN_PTR && binder)
{
if (!display_fn_pointer_type(out, type->as.fn_ptr.ret_type, NULL))
return false;
if (!(fprintf_s(out, "(*%s)(", binder) >= 0 && display_param_types(out, &type->as.fn_ptr.param_types) && fprintf_s(out, ")") >= 0))
return false;
struct Type *t = type->as.fn_ptr.ret_type;
while (t != NULL && t->tag == TYPE_FN_PTR)
{
if (!(fprintf_s(out, ")(") >= 0 && display_param_types(out, &t->as.fn_ptr.param_types) && fprintf_s(out, ")") >= 0))
return false;
t = t->as.fn_ptr.ret_type;
}
return true;
}
else
{
return display_fn_pointer_type(out, type->as.fn_ptr.ret_type, NULL) && fprintf_s(out, "(*") >= 0;
}
}

bool display_fn_signature(FILE *out, char *name, struct List *fn_params, struct Type *ret_type)
{
if (!display_fn_pointer_type(out, ret_type, NULL))
return false;
if (!(fprintf_s(out, "%s(", name) >= 0 && display_fn_params(out, fn_params) && fprintf_s(out, ")") >= 0))
return false;
struct Type *t = ret_type;
while (t != NULL && t->tag == TYPE_FN_PTR)
{
if (!(fprintf_s(out, ")(") >= 0 && display_param_types(out, &t->as.fn_ptr.param_types) && fprintf_s(out, ")") >= 0))
return false;
t = t->as.fn_ptr.ret_type;
}
return true;
}

bool display_typed_identifier(FILE *out, struct Type *type, char *ident)
{
char *space = " ";
if (ident == NULL || ident[0] == '\0')
space = "";
switch (type->tag)
{
case TYPE_INT:
{
return fprintf_s(out, "int%s%s", space, ident) >= 0;
}
case TYPE_BOOL:
{
return fprintf_s(out, "bool%s%s", space, ident) >= 0;
}
case TYPE_CHAR:
{
return fprintf_s(out, "char%s%s", space, ident) >= 0;
}
case TYPE_VOID:
{
return fprintf_s(out, "void%s%s", space, ident) >= 0;
}
case TYPE_CSTR_ARR:
{
return fprintf_s(out, "cstr_arr%s%s", space, ident) >= 0;
}
case TYPE_FILE:
{
return fprintf_s(out, "FILE%s%s", space, ident) >= 0;
}
case TYPE_PTR:
{
return display_typed_identifier(out, type->as.ptr.child, "") && fprintf_s(out, " *%s", ident) >= 0;
}
case TYPE_FN_PTR:
{
return display_fn_pointer_type(out, type, ident);
}
case TYPE_NAMED_STRUCT_REF:
{
return fprintf_s(out, "struct %s%s%s", type->as.named.name, space, ident) >= 0;
}
case TYPE_NAMED_ENUM_REF:
{
return fprintf_s(out, "enum %s%s%s", type->as.named.name, space, ident) >= 0;
}
case TYPE_ANON_STRUCT:
{
return fprintf_s(out, "struct {\n") >= 0 && display_struct_members(out, &type->as.anon_struct_or_union.struct_members) && fprintf_s(out, "}%s%s", space, ident) >= 0;
}
case TYPE_ANON_UNION:
{
return fprintf_s(out, "union {\n") >= 0 && display_struct_members(out, &type->as.anon_struct_or_union.struct_members) && fprintf_s(out, "}%s%s", space, ident) >= 0;
}
case TYPE_ANON_ENUM:
{
return fprintf_s(out, "enum {\n") >= 0 && display_enum_members(out, &type->as.anon_enum.enum_members) && fprintf_s(out, "}%s%s", space, ident) >= 0;
}
}
}

bool display_type(FILE *out, struct Type *type)
{
return display_typed_identifier(out, type, "");
}

bool display_struct_members(FILE *out, struct List *list)
{
struct ListNode *node = list->first;
while (node)
{
struct StructMember *sm = (struct StructMember *) node->data;
bool result = fprintf_s(out, "    ") >= 0 && display_typed_identifier(out, sm->type, sm->field) && fprintf_s(out, ";\n", sm->field) >= 0;
if (!(result))
return false;
node = node->next;
}
return true;
}

bool display_enum_members(FILE *out, struct List *list)
{
struct ListNode *node = list->first;
while (node)
{
char *enum_constant_name = (char *) node->data;
bool result = fprintf_s(out, "    %s,\n", enum_constant_name) >= 0;
if (!result)
return false;
node = node->next;
}
return true;
}

struct Type * parse_type(struct Lexer *lxr)
{
struct Type *type;
if (!(type = parse_direct_type(lxr)))
return NULL;
while (lexer_accept(lxr, TOK_STAR))
{
struct Type *new_type = malloc(sizeof (*new_type));
new_type->tag = TYPE_PTR;
new_type->as.ptr.child = type;
type = new_type;
}
return type;
}

struct Type * parse_direct_type(struct Lexer *lxr)
{
struct Type *type;
if (lexer_accept(lxr, TOK_VOID) || lexer_accept(lxr, TOK_CHAR) || lexer_accept(lxr, TOK_INT) || lexer_accept(lxr, TOK_BOOL) || lexer_accept(lxr, TOK_CSTR_ARR) || lexer_accept(lxr, TOK_FILE))
{
type = malloc(sizeof (*type));
switch (lxr->tok_tag)
{
case TOK_VOID:
{
type->tag = TYPE_VOID;
break;
}
case TOK_CHAR:
{
type->tag = TYPE_CHAR;
break;
}
case TOK_INT:
{
type->tag = TYPE_INT;
break;
}
case TOK_BOOL:
{
type->tag = TYPE_BOOL;
break;
}
case TOK_CSTR_ARR:
{
type->tag = TYPE_CSTR_ARR;
break;
}
case TOK_FILE:
{
type->tag = TYPE_FILE;
break;
}
default:
{
fprintf_s(stderr, "Unknown Type token %s\n", tok_tag_names[lxr->tok_tag]);
exit(1);
}
}
return type;
}
if (lexer_accept(lxr, TOK_STRUCT))
{
if (lexer_accept(lxr, TOK_IDENT))
{
type = malloc(sizeof (*type));
type->tag = TYPE_NAMED_STRUCT_REF;
type->as.named.name = lxr->token;
return type;
}
if (lexer_expect(lxr, TOK_OPEN_BRACE))
{
struct List members = parse_struct_member_list(lxr);
lexer_expect(lxr, TOK_CLOSE_BRACE);
type = malloc(sizeof (*type));
type->tag = TYPE_ANON_STRUCT;
type->as.anon_struct_or_union.struct_members = members;
return type;
}
return NULL;
}
if (lexer_accept(lxr, TOK_ENUM))
{
if (lexer_accept(lxr, TOK_IDENT))
{
type = malloc(sizeof (*type));
type->tag = TYPE_NAMED_ENUM_REF;
type->as.named.name = lxr->token;
return type;
}
if (lexer_expect(lxr, TOK_OPEN_BRACE))
{
struct List members = parse_enumerator_list(lxr);
lexer_expect(lxr, TOK_CLOSE_BRACE);
type = malloc(sizeof (*type));
type->tag = TYPE_ANON_ENUM;
type->as.anon_enum.enum_members = members;
return type;
}
return NULL;
}
if (lexer_accept(lxr, TOK_UNION))
{
lexer_expect(lxr, TOK_OPEN_BRACE);
struct List members = parse_struct_member_list(lxr);
lexer_expect(lxr, TOK_CLOSE_BRACE);
type = malloc(sizeof (*type));
type->tag = TYPE_ANON_UNION;
type->as.anon_struct_or_union.struct_members = members;
return type;
}
if (lexer_accept(lxr, TOK_FN))
{
struct Type *ret_type = NULL;
lexer_expect(lxr, TOK_OPEN_PAREN);
struct List param_types = parse_param_types(lxr);
lexer_expect(lxr, TOK_CLOSE_PAREN);
if (lexer_accept(lxr, TOK_ARROW))
{
if (!(ret_type = parse_type(lxr)))
{
fprintf_s(stderr, "PARSE ERROR at %s:%d\n", lxr->filename, lxr->line);
fprintf_s(stderr, "| Could not parse a return type after `->`.\n");
exit(1);
}
}
type = malloc(sizeof (*type));
type->tag = TYPE_FN_PTR;
type->as.fn_ptr.param_types = param_types;
type->as.fn_ptr.ret_type = ret_type;
return type;
}
return NULL;
}

bool display_const_array(FILE *out, struct List *list)
{
struct ListNode *node = list->first;
while (node)
{
struct ConstantExpr *expr = (struct ConstantExpr *) node->data;
if (node->next)
{
bool result = display_constant_expr(out, expr) && fprintf_s(out, ",\n") >= 0;
if (!result)
return false;
}
else
{
bool result = display_constant_expr(out, expr) && fprintf_s(out, "\n") >= 0;
if (!result)
return false;
}
node = node->next;
}
return true;
}

bool display_constant_expr(FILE *out, struct ConstantExpr *expr)
{
switch (expr->tag)
{
case CONST_INT:
{
return fprintf_s(out, "%d", expr->as.const_int) >= 0;
}
case CONST_BOOL:
{
if (expr->as.const_bool)
return fprintf_s(out, "true") >= 0;
else
return fprintf_s(out, "false") >= 0;
}
case CONST_CSTR:
{
return fprintf_s(out, "\"%s\"", expr->as.const_cstr) >= 0;
}
case CONST_ARRAY:
{
return fprintf_s(out, "{\n") >= 0 && display_const_array(out, &expr->as.const_array) && fprintf_s(out, "}") >= 0;
}
case CONST_IDENT:
{
return fprintf_s(out, "%s", expr->as.const_ident) >= 0;
}
}
}

struct List parse_initializer_list(struct Lexer *lxr)
{
struct List initializers = list_init();
struct ConstantExpr *expr;
while ((expr = parse_constant_expr(lxr)))
{
if (!lexer_accept(lxr, TOK_COMMA))
break;
list_push(&initializers, expr);
}
return initializers;
}

struct ConstantExpr * parse_constant_expr(struct Lexer *lxr)
{
struct ConstantExpr *expr;
if (lexer_accept(lxr, TOK_LITERAL_INT))
{
expr = malloc(sizeof (*expr));
expr->tag = CONST_INT;
expr->as.const_int = atoi(lxr->token);
return expr;
}
if (lexer_accept(lxr, TOK_TRUE) || lexer_accept(lxr, TOK_FALSE))
{
bool value = lxr->tok_tag == TOK_TRUE;
expr = malloc(sizeof (*expr));
expr->tag = CONST_BOOL;
expr->as.const_bool = value;
return expr;
}
if (lexer_accept(lxr, TOK_LITERAL_STRING))
{
expr = malloc(sizeof (*expr));
expr->tag = CONST_CSTR;
expr->as.const_cstr = lxr->token;
return expr;
}
if (lexer_accept(lxr, TOK_OPEN_BRACE))
{
struct List initializers = parse_initializer_list(lxr);
lexer_expect(lxr, TOK_CLOSE_BRACE);
expr = malloc(sizeof (*expr));
expr->tag = CONST_ARRAY;
expr->as.const_array = initializers;
return expr;
}
if (lexer_accept(lxr, TOK_IDENT))
{
expr = malloc(sizeof (*expr));
expr->tag = CONST_IDENT;
expr->as.const_ident = lxr->token;
return expr;
}
return NULL;
}

bool display_param_types(FILE *out, struct List *param_types)
{
struct ListNode *node = param_types->first;
while (node)
{
struct Type *type = (struct Type *) node->data;
if (node->next)
{
bool result = display_type(out, type) && fprintf_s(out, ", ");
if (!result)
return false;
}
else
{
bool result = display_type(out, type);
if (!result)
return false;
}
node = node->next;
}
return true;
}

bool display_fn_params(FILE *out, struct List *params)
{
struct ListNode *node = params->first;
while (node)
{
struct FnParam *param = (struct FnParam *) node->data;
if (node->next)
{
bool result = display_typed_identifier(out, param->type, param->name) && fprintf_s(out, ", ") >= 0;
if (!result)
return false;
}
else
{
bool result = display_typed_identifier(out, param->type, param->name);
if (!result)
return false;
}
node = node->next;
}
return true;
}

bool display_item(FILE *out, struct Item *item)
{
switch (item->tag)
{
case ITEM_FN_DECL:
{
return display_fn_signature(out, item->as.fn_decl.name, &item->as.fn_decl.param_types, item->as.fn_decl.ret_type) && fprintf_s(out, ";\n\n") >= 0;
}
case ITEM_FN_DEF:
{
return display_fn_signature(out, item->as.fn_def.name, &item->as.fn_def.params, item->as.fn_def.ret_type) && fprintf_s(out, "\n{\n") >= 0 && display_stmt_list(out, &item->as.fn_def.body_stmts) && fprintf_s(out, "}\n\n") >= 0;
}
case ITEM_GLOBAL_DECL:
{
return display_type(out, item->as.global_decl.type) && fprintf_s(out, " %s = ", item->as.global_decl.name) >= 0 && display_constant_expr(out, item->as.global_decl.initializer) && fprintf_s(out, ";\n\n") >= 0;
}
case ITEM_NAMED_STRUCT_DECL:
{
return fprintf_s(out, "struct %s {\n", item->as.named_struct_decl.name) >= 0 && display_struct_members(out, &item->as.named_struct_decl.members) && fprintf_s(out, "};\n\n") >= 0;
}
case ITEM_NAMED_ENUM_DECL:
{
return fprintf_s(out, "enum %s {\n", item->as.named_enum_decl.name) >= 0 && display_enum_members(out, &item->as.named_enum_decl.members) && fprintf_s(out, "};\n\n") >= 0;
}
case ITEM_POUND_INCLUDE:
{
if (item->as.pound_include.kind == POUND_INCLUDE_ANGLE_BRACKETS)
{
return fprintf_s(out, "#include <%s>\n", item->as.pound_include.filename) >= 0;
}
else
{
return fprintf_s(out, "#include \"%s\"\n", item->as.pound_include.filename) >= 0;
}
}
}
}

struct List parse_param_types(struct Lexer *lxr)
{
struct List types = list_init();
struct Type *type;
while ((type = parse_type(lxr)))
{
list_push(&types, type);
if (!lexer_accept(lxr, TOK_COMMA))
break;
}
return types;
}

struct List parse_parameters(struct Lexer *lxr)
{
struct List params = list_init();
struct Type *type;
while ((type = parse_type(lxr)))
{
lexer_expect(lxr, TOK_IDENT);
char *name = lxr->token;
struct FnParam *param = malloc(sizeof (*param));
param->type = type;
param->name = name;
list_push(&params, (void *) param);
if (!lexer_accept(lxr, TOK_COMMA))
break;
}
return params;
}

struct TranslationUnit translation_unit_init()
{
struct TranslationUnit tu;
tu.id = NEXT_TU_ID;
NEXT_TU_ID = NEXT_TU_ID + 1;
tu.directives = list_init();
tu.enum_defns = list_init();
tu.struct_defns = list_init();
tu.global_defns = list_init();
tu.fn_defns = list_init();
return tu;
}

void translation_unit_push_item(struct TranslationUnit *tu, struct Item *item)
{
switch (item->tag)
{
case ITEM_POUND_INCLUDE:
{
list_push(&tu->directives, item);
return;
}
case ITEM_NAMED_ENUM_DECL:
{
list_push(&tu->enum_defns, item);
return;
}
case ITEM_NAMED_STRUCT_DECL:
{
list_push(&tu->struct_defns, item);
return;
}
case ITEM_GLOBAL_DECL:
{
list_push(&tu->global_defns, item);
return;
}
case ITEM_FN_DEF:
{
list_push(&tu->fn_defns, item);
return;
}
case ITEM_FN_DECL:
{
fprintf_s(stderr, "[INFO] fn declarations are no longer needed.\n");
return;
}
}
}

struct TranslationUnit parse_translation_unit(struct Lexer *lxr)
{
struct TranslationUnit tu = translation_unit_init();
struct Item *item;
while ((item = parse_item(lxr)))
translation_unit_push_item(&tu, item);
lexer_expect(lxr, TOK_END_OF_INPUT);
return tu;
}

bool display_item_list(FILE *out, struct List *items)
{
struct ListNode *node = items->first;
while (node)
{
struct Item *item = (struct Item *) node->data;
if (!display_item(out, item))
return false;
node = node->next;
}
return true;
}

bool display_tu_struct_decls(FILE *out, struct TranslationUnit *tu)
{
struct ListNode *node = tu->struct_defns.first;
while (node)
{
struct Item *item = (struct Item *) node->data;
if (item->tag != ITEM_NAMED_STRUCT_DECL)
todo;
if (!(fprintf_s(out, "struct %s;\n", item->as.named_struct_decl.name) >= 0))
return false;
node = node->next;
}
return true;
}

bool display_tu_fn_decls(FILE *out, struct TranslationUnit *tu)
{
struct ListNode *node = tu->fn_defns.first;
while (node)
{
struct Item *item = (struct Item *) node->data;
if (item->tag != ITEM_FN_DEF)
todo;
if (!(display_fn_signature(out, item->as.fn_def.name, &item->as.fn_def.params, item->as.fn_def.ret_type) && fprintf_s(out, ";\n") >= 0))
return false;
node = node->next;
}
return true;
}

bool display_translation_unit(FILE *out, struct TranslationUnit *tu)
{
return fprintf_s(out, "#ifndef PARASITIC_C_FILE__%X\n", tu->id) >= 0 && fprintf_s(out, "#define PARASITIC_C_FILE__%X\n", tu->id) >= 0 && fprintf_s(out, "\n// DIRECTIVES //\n") >= 0 && display_item_list(out, &tu->directives) && fprintf_s(out, "\n// STRUCT DECLS //\n") >= 0 && display_tu_struct_decls(out, tu) && fprintf_s(out, "\n// ENUM DEFNS //\n") >= 0 && display_item_list(out, &tu->enum_defns) && fprintf_s(out, "\n// STRUCT DEFNS //\n") >= 0 && display_item_list(out, &tu->struct_defns) && fprintf_s(out, "\n// GLOBAL DEFNS //\n") >= 0 && display_item_list(out, &tu->global_defns) && fprintf_s(out, "\n// FN DECLS //\n") >= 0 && display_tu_fn_decls(out, tu) && fprintf_s(out, "\n// FN DEFNS //\n") >= 0 && display_item_list(out, &tu->fn_defns) && fprintf_s(out, "\n#endif // PARASITIC_C_FILE__%X\n", tu->id);
}
